--- a/src/Makefile
+++ b/src/Makefile
@@ -5,8 +5,13 @@ jekyll="/home/rstudio/jekyll/page/"
 all: static
 
 static:
-	cp eubon/*.html eubon/*.pdf eubon/*.docx $(nginx)
-	cp eubon/*.html $(jekyll)
+
+	cp eubon/hrf/*.html eubon/hrf/*.pdf eubon/hrf/*.docx $(nginx)
+	cp eubon/hrf/*.html $(jekyll)
+
+	cp eubon/aquamaps/*.html eubon/aquamaps/*.pdf eubon/aquamaps/*.docx $(nginx)
+	cp eubon/aquamaps/*.html $(jekyll)
+	
 #	cp $(nginx)/README.html $(nginx)/index.html
 
 clean:
