--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ fs.proxy:
 ropensci:
   build: eubon-rocker
   environment:
-    - VIRTUAL_HOST=wrangler.mirroreum.eu
+    - VIRTUAL_HOST=wrangler.local
     - VIRTUAL_PORT=8787
     - USER=rstudio
     - PASSWORD=rstudio
@@ -66,7 +66,8 @@ portal:
     - ./src/jekyll/_site:/usr/share/nginx/html
 
 proxy:
-  image: eforce21/letsencrypt-nginx-proxy
+#  image: eforce21/letsencrypt-nginx-proxy
+  image: jwilder/nginx-proxy
   ports:
     - "80:80"
     - "443:443"
